# torched-tacaw

./: .gitignore  CITATION.cff  LICENSE  README.md  TASKS.md  TODO.md  pip_freeze_from_TiO2.txt  pyproject.toml  structure.md
FDES_Python_dev/: makefile  run_cms.py
FDES_Python_dev/data/: NiOatoms  NiOdipoleatoms  NiOoneatoms  dipoleatoms  mult.in  one2atoms  oneatoms  onemult.in
FDES_Python_dev/scripts/: build_python_interface.sh
FDES_Python_dev/src/: ak_mod.f90  atoms.f90  cms.f90  cms_interface.f90  fftw.f90  glob_modules.f90  init_wf.f90  potential.f90
examples/tutorial/: tutorial.md
torched_tacaw/: __init__.py  bresenham.py  coordinates.py  core.py  io.py  modify_atoms.py  postprocessing.py  postprocessing_dask.py  postprocessing_new.py  postprocessing_old.py  tools.py  units.py
