[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torched_tacaw"
version = "0.1.0"
description = "TACAW implemented with torch using Hamish Brown's py_multislice implementation of MS algorithm."
authors = [{name = "Martin Osmera", email = "martin.osmera@mail.uu.se"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "abtem==1.0.6",
    "ase==3.23.0",
    "filelock==3.19.1",
    "h5py==3.12.1",
    "hankel==1.2.2",
    "ipython==8.12.3",
    "ipywidgets==8.1.5",
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "orb_models==0.5.5",
    "Pillow==11.3.0",
    "plotly==5.24.1",
    "psutil==6.1.0",
    "pypng==0.20220715.0",
    "PyYAML==6.0.3",
    "scikit_learn==1.7.2",
    "scipy==1.16.2",
    "skimage==0.0",
    "sympy==1.13.1",
    "torch==2.5.1",
    "tqdm==4.67.0",
    "zarr==3.1.3"
]

[project.urls]
Homepage = "https://github.com/Martexiwell/torched_tacaw"
