[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torched_tacaw"
version = "0.1.0"
description = "TACAW implemented with torch using Hamish Brown's py_multislice implementation of MS algorithm."
authors = [{name = "Martin Osmera", email = "martin.osmera@mail.uu.se"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "ase==3.23.0",
    "filelock==3.19.1",
    "h5py==3.12.1",
    "ipython==8.12.3",
    "ipywidgets==8.1.5",
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "Pillow==11.3.0",
    "psutil==6.1.0",
    "PyYAML==6.0.3",
    "scipy==1.16.2",
    "sympy==1.13.1",
    "torch==2.5.1",
    "tqdm==4.67.0",
    "zarr==3.1.3"
]

[project.urls]
Homepage = "https://github.com/Martexiwell/torched_tacaw"
