[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torched_tacaw"
version = "0.2.0"
description = "TACAW implemented with torch using Hamish Brown's py_multislice implementation of MS algorithm."
authors = [{name = "Martin Osmera", email = "martin.osmera@mail.uu.se"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "ase>=3.23.0",
    "filelock>=3.13.0",
#    "h5py>=3.12.1",
#    "ipython>=8.12.3",
#    "ipywidgets>=8.1.5",
    "matplotlib>=3.10",
    "numpy>=2.1.2",
#    "Pillow>=10.2.0",
#    "psutil==6.1.0",
    "PyYAML>=6.0.3",
    "scipy>=1.15.1",
    "sympy>=1.13.1",
    "torch>=2.3.1",
    "tqdm>=4.67.0",
    "zarr>=3.0.3",
    "pyms @ git+https://github.com/HamishGBrown/py_multislice.git",
]

[project.urls]
Homepage = "https://github.com/Martexiwell/torched_tacaw"
